removing part 3 - unused argument (skip_GRanges = TRUE)

--- a/vignettes/tidyomicsWorkshopBioc2023.Rmd
+++ b/vignettes/tidyomicsWorkshopBioc2023.Rmd
@@ -394,7 +394,7 @@ Using the `sce_obj`:
    (nCount_RNA < 100). Identify the cell composition (cell_type) of
    that cluster. 
 
-# Part 2b Genomic and transcriptomic integration
+# Part 3 Genomic and transcriptomic integration
 
 So far we have examined expression of genes across our cells, but we
 haven't considered the genomic location of the genes. In this section
@@ -469,157 +469,6 @@ smry |>
   geom_point() +
   facet_wrap(~tile, labeller=label_both)
 ```
-
-# Part 3 Nested analyses
-
-When analysing single cell data is sometimes necessary to perform
-calculations on data subsets. For example, we might want to estimate
-difference in mRNA abundance between two condition for each cell
-type. 
-
-`tidyr` and `purrr` offer a great tool to perform iterative analyses
-in a functional way.
-
-We use tidyverse `nest` to group the data. The command below will
-create a tibble containing a column with a SummarizedExperiment object
-for each cell type. `nest` is similar to tidyverse `group_by`, except
-with `nest` each group is stored in a single row, and can be a complex
-object such as `SingleCellExperiment`. 
-
-Let's import some libraries
-
-```{r}
-library(purrr)
-```
-
-First let's have a look to the cell types that constitute this dataset
-
-```{r nest SingleCellExperiment count}
-sce_obj |> 
-  count(cell_type)
-```
-
-Let's group the cells based on cell identity using `nest`
-
-```{r nest SingleCellExperiment }
-
-sce_obj_nested <-
-  sce_obj |> 
-  nest(sce = -cell_type) 
-
-sce_obj_nested
-```
-
-Let's see what the first element of the Surat column looks like 
-
-```{r nest sce 2}
-sce_obj_nested |> 
-  slice(1) |> 
-  pull(sce)
-```
-
-Now, let's perform a differential gene-transcript abundance analysis
-between the two conditions for each cell type. 
-
-```{r nest sce integrate, message=FALSE}
-sce_obj_nested <-
-  sce_obj_nested |> 
-  
-  # Filter for sample with more than 30 cells
-  mutate(sce = map(sce, ~ .x |> add_count(sample) |> filter(n > 50))) |>
-  filter(map_int(sce, ncol) > 0) |>
-
-  # Select significant genes
-  mutate(sce = imap(
-    sce,
-    ~ .x %>% {print(.y); (.)} |> 
-    
-    # Integrate - using batchelor.
-    multiBatchNorm(batch = colData(.x)$sample) |>
-    fastMNN(batch = colData(.x)$sample) |>
-      
-    # Join metadata removed by fastMNN - using tidyverse
-    left_join(as_tibble(.x)) |>
-      
-    # Dimension reduction - using scater
-    runUMAP(ncomponents = 2, dimred = "corrected")
-  
-  ))
-
-sce_obj_nested
-```
-
-We can the lies the top genes with the heat map iteratively across the
-cell types
-
-```{r nest sce heatmap, message=FALSE}
-sce_obj_nested <-
-  sce_obj_nested |> 
-  
-  # Build heatmaps
-  mutate(umap = map(sce,plotUMAP)) 
-
-sce_obj_nested
-```
-
-Let's have a look to the first heatmap
-
-```{r nest sce heatmap 2, fig.width=8, fig.height=8}
-sce_obj_nested |> 
-  slice(1) |> 
-  pull(umap)
-```
-
-You can do this whole analysis without saving any temporary variable using the piping functionality of tidy R programming 
-
-```{r nest sce heatmap all, eval=FALSE}
-sce_obj |> 
-  
-  # Nest
-  nest(sce = -cell_type) |> 
-  
-  # Filter for sample with more than 30 cells
-  mutate(sce = map(sce, ~ .x |> add_count(sample) |> filter(n > 50))) |>
-  filter(map_int(sce, ncol) > 0) |>
-
-  # Select significant genes
-  mutate(sce = imap(
-    sce,
-    ~ .x %>% {print(.y); (.)} |> 
-    
-    # Integrate - using batchelor.
-    multiBatchNorm(batch = colData(.x)$sample) |>
-    fastMNN(batch = colData(.x)$sample) |>
-      
-    # Join metadata removed by fastMNN - using tidyverse
-    left_join(as_tibble(.x)) |>
-      
-    # Dimension reduction - using scater
-    runUMAP(ncomponents = 2, dimred = "corrected")
-  
-  )) |>
-  
-   # Build heatmaps
-  mutate(umap = map(sce,plotUMAP))  |> 
-  
-  # Extract heatmaps
-  pull(umap)
-```
-
-### Exercises
-
-1. Let's suppose that you want to perform the analyses only for cell
-   types that have a total number of cells bigger than 1000. For
-   example, if a cell type has less than a sum of 1000 cells across
-   all samples, that cell type will be dropped from the dataset. 
-
-- Answer this question avoiding to save temporary variables, and using
-  the function add_count to count the cells (before nesting), and then
-  filter 
-- Answer this question avoiding to save temporary variables, and using
-  the function map_int to count the cells (after nesting), and the
-  filter 
-
 
 **Session Information**
 
