--- a/vignettes/tidyomicsWorkshopBioc2023.Rmd
+++ b/vignettes/tidyomicsWorkshopBioc2023.Rmd
@@ -12,7 +12,7 @@ vignette: >
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
+knitr::opts_chunk$set(echo = TRUE, cache = FALSE)
 ```
 
 ## Instructors
